# RTES_Project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
lib/: gui.h  observatory.h
project/: CMakeLists.txt  observatory_v1.c  ptask_prova.c
src/: gui.c  main.c  observatory.c
